--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -42,26 +42,18 @@
 			<div class="banner_title" id="library_title">Library</div>
 		</div>
 		<div class="library_body">
-			<div class="library_sidepanel">
+			<div class="library_superpanel">
 				<!-- Register button -->
-				<div style="padding: 1rem 0;">
-					<button type="button" class="menu_button menu_button_small modal_trigger" id="menu_library_register" data-toggle="modal"
-						data-target="#register_novel_modal_push" title="Add Series">
-						<div class="button_icon">
-							<ion-icon name="add-outline"></ion-icon>
-						</div>
-						<div class="button_title"> Register </div>
-					</button>
-				</div>
+				<button type="button" class="btn btn-outline-primary superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
+					data-target="#register_novel_modal_push" title="Add Series">
+					<ion-icon name="add-outline"></ion-icon>
+					<span> Register </span>
+				</button>
 				<!-- Update button -->
-				<div style="padding: 1rem 0;">
-					<button type="button" class="menu_button menu_button_small" id="menu_library_update" title="Update Library">
-						<div class="button_icon">
-							<ion-icon name="sync-outline"></ion-icon>
-						</div>
-						<div class="button_title"> Update </div>
-					</button>
-				</div>
+				<button type="button" class="btn btn-outline-primary superpanel_menu_btn" id="menu_library_update_btn" title="Update Library">
+					<ion-icon name="sync-outline"></ion-icon>
+					<span> Update </span>
+				</button>
 			</div>
 			<div class="library_mainpanel">
 				<!-- Novel entries -->
