--- a/app/templates/series_entry.html
+++ b/app/templates/series_entry.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="entry_download_bar">
 			<a class="series_entry_btn table_of_contents" href="{{url_for('library_series_toc',series_code=novel.code)}}"
-				title="Go to Table of Contents">
+				title="Go to Table of Contents" style="margin-left: 0;">
 				<span> Table of Contents </span>
 				<ion-icon style="font-size: 1.5rem; margin: 0 auto;" name="library-outline"></ion-icon>
 			</a>
