--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -1,3 +1,5 @@
+{% from "dictionary_entry.html" import dictionary_entry%}
+
 {% extends 'general_layout.html' %}
 {% block content %}
 	<section class="section_dictionary">
@@ -14,22 +16,20 @@
 			<div class="banner_title" id="dictionary_title">Dictionary</div>
 		</div>
 		<div class="dictionary_body">
-			<div class="dict_topbar_div">
-				<button type="button" class="btn btn-success">
-					Download All
+			<div class="superpanel" id="dictionary_superpanel">
+				<button type="button" class="btn btn-outline-primary superpanel_menu_btn" id="menu_dictionary_dlall_btn">
+					<ion-icon name="download-outline"></ion-icon>
+					<span> Download All </span>
 				</button>
-				<div class="dropdown">
-					<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Dropdown button
-					</button>
-					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-						<a class="dropdown-item">Action</a>
-						<a class="dropdown-item">Another action</a>
-						<a class="dropdown-item">Something else here</a>
-					</div>
-				</div>
 			</div>
-			<div class="dict_textbody_div">
+			<div class="flashpanel" id="dictionary_flashpanel">
+				<!-- Flashed messages -->
+			</div>
+			<div class="mainpanel" id="dictionary_mainpanel">
+				<!-- Novel entries -->
+				{% for dictionary in dictionaries %}
+					{{ dictionary_entry(dictionary) }}
+				{% endfor %}
 			</div>
 		</div>
 	</section>
