--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -21,6 +21,10 @@
 					<ion-icon name="download-outline"></ion-icon>
 					<span> Download All </span>
 				</button>
+				<button type="button" class="btn btn-outline-primary superpanel_menu_btn" id="menu_dictionary_honorifics_btn">
+					<ion-icon name="earth"></ion-icon>
+					<span> Honorifics </span>
+				</button>
 			</div>
 			<div class="flashpanel" id="dictionary_flashpanel">
 				<!-- Flashed messages -->
