--- a/app/templates/dictionary_entry.html
+++ b/app/templates/dictionary_entry.html
@@ -1,5 +1,5 @@
 {% macro dictionary_entry(dictionary) %}
-	<div class="dictionary_entry {{'dictionary_entry_disabled' if not dictionary.enabled}}" id="{{dictionary.abbr}}">
+	<div class="dictionary_entry {{'dictionary_entry_disabled' if not dictionary.enabled}}" id="dict_{{dictionary.abbr}}">
 		<div class="dictionary_entry_abbr">
 			<div class="dictionary_entry_abbr_text">
 				{{dictionary.abbr}}
@@ -11,17 +11,17 @@
 			</div>
 			<div class="dictionary_entry_action_bar">
 				<div class="dictionary_entry_action_div action_download" title="Download dict">
-					<ion-icon name="arrow-down-circle-outline"></ion-icon>
+					<ion-icon name="arrow-down-circle"></ion-icon>
 				</div>
 				<div class="dictionary_entry_action_div action_upload" title="Upload and Replace dict">
-					<ion-icon name="arrow-up-circle-outline"></ion-icon>
+					<ion-icon name="arrow-up-circle"></ion-icon>
 				</div>
 				<div class="dictionary_entry_action_div action_edit" title="Edit dict contents">
-					<ion-icon name="create-outline"></ion-icon>
+					<ion-icon name="create"></ion-icon>
 				</div>
 				<div class="dictionary_entry_action_div action_toggle_enable" title="Enable/Disable dict"
 					action="{{url_for('dictionaries_toggle_entry',dict_abbr=dictionary.abbr)}}">
-					<ion-icon name="checkbox-outline"></ion-icon>
+					<ion-icon name="{{'checkbox-outline' if dictionary.enabled else 'square-outline'}}"></ion-icon>
 				</div>
 			</div>
 		</div>
