--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -62,7 +62,7 @@
 					<div class="flash_msg_div">
 						{% for category, message in messages %}
 							{% if category == 'success' or category == 'warning' or category == 'danger'%}
-							<div class="alert alert-dismissible fade show flash_msg_{{category}}" role="alert">
+							<div class="alert alert-dismissible fade show alert-{{category}}" role="alert">
 								{{ message }}
 								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
