General progress towards completion of /dictionary
- Partially implemented processing of honorifics
- Added some more user feedback via custom error messages when processing dictionaries
- Implemented model for containing honorifics data

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -291,6 +291,10 @@ input[type=number] {
 .superpanel{
   margin: 3rem 0 1rem 0;
 }
+.flashpanel{
+  display: flex;
+  flex-direction: column-reverse;
+}
 .mainpanel{
   display: flex;
   flex-direction: column;
