--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -1,4 +1,5 @@
-{% from "dictionary_entry.html" import dictionary_entry%}
+{% from "dictionary_entry.html" import dictionary_entry %}
+{% from "flash_alert.html" import flash_alert %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
@@ -26,8 +27,11 @@
 					<span> Honorifics </span>
 				</button>
 			</div>
-			<div class="flashpanel" id="dictionary_flashpanel">
+			<div class="flashpanel notranslate" id="dictionary_flashpanel">
 				<!-- Flashed messages -->
+				{% with messages = get_flashed_messages(with_categories=true) %}
+					{{ flash_alert(messages) }}
+				{% endwith %}
 			</div>
 			<div class="mainpanel" id="dictionary_mainpanel">
 				<!-- Novel entries -->
