--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="light">
+<html data-theme={%-block theme-%}"light"{%-endblock-%}>
 <head>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
