--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -1,7 +1,8 @@
-{% from "series_entry.html" import series_entry%}
-{% from "modals/register_novel.html" import register_novel_modal%}
-{% from "modals/edit_novel.html" import edit_novel_modal%}
-{% from "modals/remove_novel.html" import remove_novel_modal%}
+{% from "series_entry.html" import series_entry %}
+{% from "flash_alert.html" import flash_alert %}
+{% from "modals/register_novel.html" import register_novel_modal %}
+{% from "modals/edit_novel.html" import edit_novel_modal %}
+{% from "modals/remove_novel.html" import remove_novel_modal %}
 
 {% extends 'general_layout.html' %}
 {% block content %}
@@ -58,20 +59,7 @@
 			<div class="flashpanel" id="library_flashpanel">
 				<!-- Flashed messages -->
 				{% with messages = get_flashed_messages(with_categories=true) %}
-					{% if messages %}
-					<div class="flash_msg_div">
-						{% for category, message in messages %}
-							{% if category == 'success' or category == 'warning' or category == 'danger'%}
-							<div class="alert alert-dismissible fade show alert-{{category}}" role="alert">
-								{{ message }}
-								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							{% endif %}
-						{% endfor %}
-					</div>
-					{% endif %}
+					{{ flash_alert(messages) }}
 				{% endwith %}
 			</div>
 			<div class="mainpanel" id="library_mainpanel">
