--- a/app/templates/dictionary_entry.html
+++ b/app/templates/dictionary_entry.html
@@ -11,7 +11,7 @@
 			</div>
 			<div class="dictionary_entry_action_bar">
 				<div class="dictionary_entry_action_div action_download" title="Download dict">
-					<ion-icon name="arrow-down-circle"></ion-icon>
+					<ion-icon name="save"></ion-icon>
 				</div>
 				<div class="dictionary_entry_action_div action_upload" title="Upload and Replace dict">
 					<ion-icon name="arrow-up-circle"></ion-icon>
