--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -18,16 +18,16 @@
 		{{ remove_novel_modal(rmv_form)}}
 
 		<!-- Progress bar -->
-		<div class="progress_bar_display">
-			<div class="progress_bar_label">
-				<div class="spinner-border text-warning" role="status">
+		<div class="library_update_progress_bar_display">
+			<div class="library_update_progress_bar_label">
+				<div class="spinner-border text-warning" role="status" id="library_update_spinner">
 					<span class="sr-only"></span>
 				</div>
-				<span>
-					Updating...
-				</span>
+				<div class="library_update_progress_bar_info">
+					Fetching updates for <span id="update_info_series"></span>
+				</div>
 			</div>
-			<div class="progress_bar_container">
+			<div class="library_update_progress_bar_container">
 				<div class="progress" style="height: 0.5rem; background: #ffe26e;">
 					<div class="progress-bar bg-warning" id="update_progress_bar"
 						role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
